Fixed WvW pane being displayed initially

--- a/gw2t.css
+++ b/gw2t.css
@@ -770,6 +770,9 @@ textarea.jsCopyCode {
 .mapPaneBackground {
 	background: url("img/background/space.jpg") repeat center;
 }
+#wvwPane {
+	display: none;
+}
 
 /* Bottom side: Timeline */
 #itemTimeline {
