--- a/style/account.css
+++ b/style/account.css
@@ -270,11 +270,11 @@ input[type="text"].accTokenNameUsed {
 	color: #e4e0b3;
 	border-top: 1px solid #222;
 	border-bottom: 1px solid #000;
-	background-image: url("../img/background/separator.png");
+	background-image: url("../img/background/tab.png");
 	background-size: 100% 100% !important;
 }
 .chrHeader:hover {
-	background-image: url("../img/background/separator_hover.png") !important;
+	background-image: url("../img/background/tab_hover.png") !important;
 	animation: none !important;
 }
 .chrHeaderLeft {
@@ -1344,11 +1344,11 @@ input[type="text"].bnkSearchInput:hover {
  */
 .bnkTabSeparator {
 	width: 100%; height: 40px;
-	background-image: url("../img/background/separator.png");
+	background-image: url("../img/background/tab.png");
 	background-size: 100% 100%;
 }
 .bnkTabSeparator:hover {
-	background-image: url("../img/background/separator_hover.png");
+	background-image: url("../img/background/tab_hover.png");
 }
 .bnkTabHover {
 	display: none;
