--- a/style/account.css
+++ b/style/account.css
@@ -1369,6 +1369,7 @@ input[type="text"].bnkSearchInput:hover {
 }
 .bnkTabHeader {
 	display: block;
+	overflow: hidden;
 	padding-top: 4px;
 	line-height: normal;
 	font-family: Trebuchet MS, Menomonia;
