--- a/style/overlay.css
+++ b/style/overlay.css
@@ -24,6 +24,9 @@
 	margin-bottom: 2px;
 	padding: 1px 2px 1px 4px;
 }
+.tmlOpaque {
+	background: linear-gradient(to right, #111 0%, #383838 50%, #111 100%);
+}
 #tmlToggle {
 	top: 0;
 	left: 0;
