--- a/style/account.css
+++ b/style/account.css
@@ -1145,6 +1145,13 @@ a.chrWalletLink {
 }
 
 /*
+ * Skills bar and icons.
+ */
+.sklWindow {
+	
+}
+
+/*
  * Trait details tooltips.
  */
 .trtTooltip {
