Sale update, bank namespace, item search

--- a/gw2t.css
+++ b/gw2t.css
@@ -308,6 +308,33 @@ img {
 	display: table-cell;
 	line-height: 16px;
 }
+/*
+ * Item search bar.
+ */
+.itmSearchResultContainer {
+	position: relative;
+}
+.itmSearchResultList {
+	position: absolute; z-index: 2;
+	width: 270px;
+	max-height: 220px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding: 4px;
+}
+.itmSearchResultEntry {
+	display: block;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 18px;
+}
+.itmSearchResultEntry img {
+	width: 16px; height: 16px;
+	margin-right: 8px;
+}
+.itmSearchResultEntry:hover img {
+	width: 32px; height: 32px;
+}
 
 /*
  * Style for perfect-scrollbar JS plugin by Hyunje Alex Jun.
