Bank one count price, burglar, fix event null zone

--- a/style/features.css
+++ b/style/features.css
@@ -373,9 +373,10 @@ dt.jpzListNameHover {
 .clt_noxiouspods { background-position: -672px 0; }
 .clt_prioryseals { background-position: -704px 0; }
 .clt_rangerpets { background-position: -736px 0; }
-.clt_speedyreader { background-position: -768px 0; }
-.clt_strongboxes { background-position: -800px 0; }
-.clt_tigerspirit { background-position: -832px 0; }
+.clt_skrittburglar { background-position: -768px 0; }
+.clt_speedyreader { background-position: -800px 0; }
+.clt_strongboxes { background-position: -832px 0; }
+.clt_tigerspirit { background-position: -864px 0; }
 
 .mapNeedle0, .mapNeedle1, .mapNeedle2 {
 	border-radius: 50%;
