--- a/style/account.css
+++ b/style/account.css
@@ -1609,7 +1609,7 @@ input[type="text"].bnkSearchInput:hover {
 	right: 7px;
 	font-size: 13px;
 }
-.bnkSlotPrice {
+.bnkSlotPrice, .bnkSlotPriceOne {
 	display: block;
 	position: absolute;
 	left: 8px;
@@ -1624,6 +1624,13 @@ input[type="text"].bnkSearchInput:hover {
 		0px -1px 1px #000,
 		1px 0px 1px #000,
 		-1px 0px 1px #000;
+}
+.bnkSlotPriceOne {
+	display: none;
+}
+.bnkSlot:hover .bnkSlotPriceOne {
+	display: block;
+	bottom: 18px;
 }
 .bnkCondense .bnkSlotPrice {
 	left: 6px;
