--- a/style/account.css
+++ b/style/account.css
@@ -1332,8 +1332,7 @@ a.chrWalletLink {
 .bnkSearch {
 	display: inline-block;
 	width: 720px;
-	margin-top: 6px;
-	margin-bottom: 2px;
+	margin: 6px 16px 2px 0px;
 	vertical-align: bottom;
 }
 input[type="text"].bnkSearchInput {
@@ -1355,7 +1354,6 @@ input[type="text"].bnkSearchInput:hover {
  */
 .bnkButtons {
 	display: inline-block;
-	margin-left: 16px;
 	vertical-align: bottom;
 	background: linear-gradient(to top, #0b0d0e 0%,transparent 100%);
 	border-radius: 2px;
@@ -1413,10 +1411,11 @@ input[type="text"].bnkSearchInput:hover {
 /*
  * Bank custom catalog.
  */
-.bnkCatalogTabHighlight {
+.bnkCatalogTabHighlight, .bnkCatalogSlotHighlight {
 	background-image: linear-gradient(270deg, #e4e0b3, transparent);
 	background-size: 400% 400%;
 	animation: aniPulsate 2s ease infinite;
+	box-shadow: 0px 0px 16px #e4e0b3;
 }
 .bnkCatalogTabAdd {
 	background: url("../img/ui/new.png");
@@ -1426,14 +1425,6 @@ input[type="text"].bnkSearchInput:hover {
 	opacity: 1;
 	box-shadow: 0px 0px 32px #0b0d0e;
 }
-.bnkCatalogMenu {
-	display: inline-block;
-	width: 720px;
-	background-image: linear-gradient(to top, #7c7253 0%, transparent 100%);
-	border-left: 3px solid rgba(228,224,179,0.6);
-	border-right: 3px solid rgba(228,224,179,0.6);
-	border-radius: 4px;
-}
 .bnkCatalogTabEdit {
 	top: 4px;
 	left: -38px;
@@ -1442,14 +1433,13 @@ input[type="text"].bnkSearchInput:hover {
 .bnkCatalogTabEditor, .bnkCatalogSlotEditor {
 	display: inline-block;
 	line-height: 32px;
+	background-image: linear-gradient(to top, #7c7253 0%, transparent 100%);
+	border-left: 3px solid rgba(228,224,179,0.6);
+	border-right: 3px solid rgba(228,224,179,0.6);
+	border-radius: 4px;
 }
-input[type="text"].bnkCatalogSlotAdd {
+input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 	width: 256px;
-}
-input[type="text"].bnkCatalogTabRename {
-	width: 256px;
-}
-.bnkCatalogSlotAdd {
 	margin-right: 8px;
 }
 .bnkCatalogMenuClose {
@@ -1463,8 +1453,15 @@ input[type="text"].bnkCatalogTabRename {
 	background-image: url("../img/ui/adjust_right.png");
 	transform: rotate(90deg);
 }
-.bnkCatalogTabDelete {
+.bnkCatalogTabDelete, .bnkCatalogSlotDelete {
 	background-image: url("../img/ui/default.png");
+}
+.bnkCatalogSlotLeft {
+	background-image: url("../img/ui/adjust_right.png");
+	transform: rotate(-180deg);
+}
+.bnkCatalogSlotRight {
+	background-image: url("../img/ui/adjust_right.png");
 }
 /*
  * Bank tabs and separators.
@@ -1618,6 +1615,7 @@ input[type="text"].bnkCatalogTabRename {
 	background-size: 400% 400%;
 	animation: aniPulsate 2s ease infinite;
 	border-radius: 4px;
+	box-shadow: 0px 0px 24px red;
 }
 .bnkSlotIcon {
 	display: block;
