--- a/style/account.css
+++ b/style/account.css
@@ -1879,13 +1879,15 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .bnkTransactionsTooltip { /* Container for transaction entries in an item's tooltip */
 	display: block;
 	position: absolute;
-	margin-top: 8px;
-	margin-left: -8px;
+	margin-top: 14px;
+	margin-left: 16px;
+	padding: 4px 6px 4px 6px;
 	line-height: normal;
-	padding: 4px;
-	border-radius: 4px;
 	white-space: nowrap;
-	background: rgba(0,0,0,0.5);
+	background-image: url("../img/background/tooltip.png");
+	background-size: cover;
+	border: 2px solid rgba(87, 129, 170, 0.7);
+	border-radius: 2px;
 }
 .bnkTransactionsPrintout {
 	padding: 8px;
