Sale update, collate prices, chain duration

--- a/gw2t.css
+++ b/gw2t.css
@@ -2460,7 +2460,7 @@ label:hover {
 	position: relative;
 	background: radial-gradient(ellipse at center, #333 0%, #222 50%, #111 100%);
 }
-#accContent {
+.accDishMain {
 	display: none;
 }
 
