--- a/style/account.css
+++ b/style/account.css
@@ -7,6 +7,9 @@
 	position: absolute;
 	width: 100%; height: 100%;
 }
+.accDishMain {
+	display: block;
+}
 
 #accToggle, #accExpand, #accClose {
 	top: auto; bottom: -14px; /* Center it across the horizontal line */
