--- a/style/account.css
+++ b/style/account.css
@@ -361,14 +361,20 @@ input[type="text"].accTokenHovered {
 	vertical-align: middle;
 	display: block;
 	width: 100%; height: 2px;
+	background: rgba(0, 0, 0, 0.1);
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	border-radius: 2px;
-	background: rgba(0, 0, 0, 0.1);
 }
 .audTableCellBar s { /* The inner progress of the bar graph */
 	display: block;
 	height: 100%;
 	background: rgba(255,255,255,0.2);
+}
+.audTableTally {
+	margin-top: -8px;
+	display: block;
+	font-size: 12px;
+	opacity: 0.5;
 }
 
 /* Characters
