--- a/style/account.css
+++ b/style/account.css
@@ -306,6 +306,55 @@ input[type="text"].accTokenHovered {
 	animation: aniFlicker 1s ease infinite;
 }
 
+#audSummary {
+	margin-top: 48px;
+}
+.audUpgrades {
+	display: inline-block;
+	vertical-align: top;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 17px;
+}
+.audUpgradeCount {
+	font-size: 18px;
+	color: #ffeeaa;
+	opacity: 0.7;
+}
+.audUpgradeIcon {
+	width: 64px; height: 64px;
+}
+.audUpgradeValues {
+	display: block;
+	margin-top: -28px;
+}
+
+.audSummarySubtitle {
+	margin-bottom: -8px;
+	line-height: normal;
+	font-family: Menomonia;
+	font-size: 24px;
+	color: #fdc84e;
+}
+.audSummaryCoin {
+	line-height: normal;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 48px;
+	text-shadow:
+		0px 1px 4px #000,
+		0px -1px 4px #000,
+		1px 0px 4px #000,
+		-1px 0px 4px #000;
+}
+.audSummaryMoney {
+	margin-top: -4px;
+	margin-bottom: 16px;
+	line-height: normal;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 24px;
+	color: #ffde9d;
+	opacity: 0.2;
+}
+
 .audTitleContainer {
 	display: block;
 }
@@ -377,17 +426,14 @@ input[type="text"].accTokenHovered {
 	opacity: 0.5;
 }
 
-#audSummary {
-	margin-top: 64px;
+#audDebug {
+	margin-top: 16px;
 }
-.audSummaryCoin {
-	font-family: Trebuchet MS, Menomonia;
-	font-size: 48px;
-	text-shadow:
-		0px 1px 4px #000,
-		0px -1px 4px #000,
-		1px 0px 4px #000,
-		-1px 0px 4px #000;
+.audDebugButton {
+	margin-right: 8px;
+	padding: 4px 6px 4px 6px;
+	font-family: Menomonia;
+	font-size: 14px;
 }
 
 /* Characters
@@ -411,7 +457,7 @@ input[type="text"].accTokenHovered {
 	font-size: 16px;
 	text-decoration: none;
 }
-#chrAccountName {
+#chrAccountName, #audAccountName {
 	display: inline;
 	padding: 4px 64px 4px 64px;
 	font-family: Menomonia;
@@ -428,6 +474,14 @@ input[type="text"].accTokenHovered {
 		0px -1px 4px #000,
 		1px 0px 4px #000,
 		-1px 0px 4px #000;
+}
+#audAccountName {
+	display: inline-block;
+	padding: 8px 64px 8px 64px;
+	margin-bottom: 8px;
+	line-height: normal;
+	font-variant: normal;
+	font-weight: normal;
 }
 input[type="text"].accTokenNameUsed {
 	background: linear-gradient(to right, #7c7253 0%, transparent 100%);
