--- a/gw2t.css
+++ b/gw2t.css
@@ -1045,6 +1045,13 @@ textarea.jsCopyCode {
 .tmlSegmentActive .tmlSegmentNameBoss {
 	color: lime;
 }
+.tmlIcon {
+	width: 24px; height: 24px;
+	margin-right: 2px;
+}
+.tmlIcon:hover {
+	outline: 1px solid rgba(255, 136, 68, 1);
+}
 
 /* Top right corner: Dashboard */
 #itemDashboard {
