--- a/gw2t.css
+++ b/gw2t.css
@@ -2595,7 +2595,7 @@ label:hover {
 	display: none !important;
 }
 .cssCopyText {
-	position: absolute;
+	position: fixed;
 	top: -9999px;
 }
 .cssFadedLess {
